kubernetes/api-database-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-database
  namespace: default
spec:
  type: ExternalName
  externalName: host.minikube.internal
