kubernetes/api-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-database
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-database
  template:
    metadata:
      labels:
        app: api-database
    spec:
      volumes:
        - name: data
          emptyDir: { }
      containers:
        - name: postgres
          image: eventuateio/eventuate-postgres:0.12.0.RELEASE
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/
---
apiVersion: v1
kind: Service
metadata:
  name: api-database
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: api-database
