kubernetes/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-gtw
  namespace: default
  labels:
    app: internal-gtw
spec:
  selector:
    istio: ingressgateway
    app: internal-ingressgateway
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http
      hosts:
        - "api.footyandsweep-dev.com"
